[project]
name = "infintime-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "markdownify>=1.1.0",
    "openai>=1.63.0",
    "pydantic-ai[examples]>=0.0.18",
    "requests>=2.32.3",
]
